Make sure colors and contrasts are accessible

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,7 +21,8 @@ $paleGray: #f2f2f2;
 $gray: #555555;
 $highlightGray: E0E0E0;
 $backgroundGray: #f1f1f1;
-$lightBlue: #0098D3;
+$lightBlue: #95bed0;
+$darkSkalBlue: #00121a;
 
 $inner-stripe-even: #fffafa;
 $inner-stripe-odd: #F5FFFA;
@@ -74,7 +75,7 @@ $unpaid: #B00100;
     overflow: auto; /* Enable scrolling if the sidenav has too much content */
     li {
       text-align: center;
-      color: $paleGray;
+      color: $blue;
       margin-bottom:5px;
       padding: 1px;
     }
@@ -85,6 +86,7 @@ $unpaid: #B00100;
       -border-radius: 10px;
       border-radius: 10px;
       background-color: $paleGray;
+      color: $blue;
     }
     /* Change the link color on hover */
     li a:hover {
